# data_structures

./: .gitignore  CMakeLists.txt  DATA_STRUCTURES_GUIDE.md  README.md  main.c
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  data_structures  test_unidirectionalList
include/: dynamicArray.h  stack.hpp  status.h  unidirectionalList.h  unidirectionalList.hpp
src/: list.cpp  stack.cpp  unidirectionalList.c  unidirectionalList.cpp
tests/: test_unidirectionalList.c
